<resources>
    <string name="app_name">Waffarly</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="error" >ERROR : </string>
    <string name="waffarlyTitel">Waffarly</string>
    <string name="spinnerHint">Choose Category</string>
    <string name="shopNameHint">Shop Name</string>
    <string name="descriptionHint">Description</string>
    <string name="addressHint">Address</string>
    <string name="summaryHint">Summary</string>
    <string name="addOffer">Add Offer</string>
    <string name="email">Email </string>
    <string name="password">Password</string>
    <string name="loginBtn">Log in To My Account</string>
    <string name="createAccountBtn">Create new account</string>
    <string name="userNameHint">User Name</string>
    <string name="save">Save</string>
    <string name="back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="category">
        <item>Clothes</item>
        <item>Shoes</item>
        <item>Laptop</item>
        <item>Electronics</item>
        <item>Mobile</item>
        <item>Super Market</item>
    </string-array>
</resources>
