<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/m4"
    tools:context="com.example.jesus.waffarly.ItemDetails">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/grey">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/shop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/shopNameHint"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp">
            <android.support.v7.widget.CardView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cartoon" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:paddingLeft="5dp"
                android:text="@string/descriptionHint"
                android:textColor="@color/textColor"
                android:textSize="20dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionTitle"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Finally, compile and run the app and you should see something
            Finally, compile and run the app and you should see something
                       Finally, compile and run the app and you should see something
                    Finally, compile and run the app and you should see something
                    Finally, compile and run the app and you should see somethinglike
                     the screenshot below.and you should see something like the screenshot below.

                     If you create enough ems and scroll through the list, the views will be recycled and far smoother by default than the "
                    android:textColor="@color/black" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/addressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:paddingLeft="5dp"
                android:text="@string/addressHint"
                android:textColor="@color/textColor"
                android:textSize="20dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/addresss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressTitle"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="If you create enough ems and scroll through the list
            Finally, compile and run the app and you should see something
            , the views will be recycled and far smoother by default than the "
                    android:textColor="@color/black" />
            </android.support.v7.widget.CardView>

            <ImageView
                android:id="@+id/locationSite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/addresss"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:src="@drawable/location" />
</RelativeLayout>
        </ScrollView>
</RelativeLayout>
